--- a/templates/blog/blog_detail.html
+++ b/templates/blog/blog_detail.html
@@ -7,15 +7,15 @@
                 <h2 class="article-title">{{ object.name }}</h2>
                 by <a class="mr-2" href="{% url 'blogs-by-author' object.author.id %}">{{ object.author }}</a>
                 <small class="text-muted">on {{ object.post_date|date:"F d, Y" }}</small>
-                {% if object.blogauthor == user %}
-                    <div>
-                        <a class="btn btn-secondary btn-sm mt-1 mb-1"
-                           href="{% url 'post-update' object.id %}">Update</a>
-                        <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'post-delete' object.id %}">Delete</a>
-                    </div>
-                {% endif %}
             </div>
             <p class="blog-description-section">{{ object.description }}</p>
+            {% if object.author.user_id == user.id %}
+                    <div>
+                        <a class="btn btn-secondary btn-sm mt-1 mb-1"
+                           href="{% url 'blog-update' object.id %}">Update</a>
+                        <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'blog-delete' object.id %}">Delete</a>
+                    </div>
+                {% endif %}
         </div>
     </article>
 
@@ -26,7 +26,8 @@
     {% endfor %}
     <hr>
     {% if user.is_authenticated %}
-        <a href="{% url 'blog_comment' blog.id %}">Add a new comment</a></p>
+        <a class="btn btn-outline-info"
+           href="{% url 'blog_comment' blog.id %}">Add a new comment</a>
     {% else %}
         <p><a href="{% url 'login' %}?next={{ request.path }}">Login</a> to add a new comment</p>
     {% endif %}
